--- a/starter/app/src/main/res/layout/item_detail_fragment.xml
+++ b/starter/app/src/main/res/layout/item_detail_fragment.xml
@@ -43,6 +43,7 @@
             android:inputType="textPersonName"
             android:textAlignment="center"
             android:text="@={itemDetailViewModel.shoeName}"
+            android:imeOptions="actionNext"
             app:errorEnabled="true"
             app:hintEnabled="false"
             app:error="@{itemDetailViewModel.userNameError}"
@@ -72,11 +73,12 @@
             android:paddingEnd="16dp"
             android:textAlignment="center"
             android:text="@={itemDetailViewModel.shoeCompany}"
+            android:imeOptions="actionNext"
             app:errorEnabled="true"
             app:hintEnabled="false"
             app:error="@{itemDetailViewModel.userNameError}"
             app:counterEnabled="true"
-            app:counterMaxLength="20"
+            app:counterMaxLength="4"
             app:layout_constraintBottom_toTopOf="@id/shoeSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -99,6 +101,7 @@
             android:textAlignment="center"
             android:lines="1"
             android:text="@={`` + itemDetailViewModel.shoeSize}"
+            android:imeOptions="actionNext"
             app:layout_constraintBottom_toTopOf="@id/shoeDescription"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -117,16 +120,17 @@
             android:autofillHints="@string/shoe_details"
             android:selectAllOnFocus="true"
             android:imeActionLabel="@string/save"
-            android:imeOptions="actionDone"
             android:ems="10"
             android:hint="@string/shoe_details"
-            android:inputType="textMultiLine"
+            android:inputType="textImeMultiLine"
             android:textAlignment="center"
+            android:maxLines="2"
+            android:imeOptions="actionDone"
             app:errorEnabled="true"
             app:hintEnabled="false"
             app:error="@{itemDetailViewModel.userNameError}"
             app:counterEnabled="true"
-            app:counterMaxLength="10"
+            app:counterMaxLength="8"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -137,6 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:onClick="@{() ->itemDetailViewModel.onCancel()}"
             android:text="@android:string/cancel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/save"
