--- a/starter/app/src/main/res/layout/scrolling_fragment.xml
+++ b/starter/app/src/main/res/layout/scrolling_fragment.xml
@@ -17,7 +17,7 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/shoe_list"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
