--- a/starter/app/src/main/res/layout/item_detail_fragment.xml
+++ b/starter/app/src/main/res/layout/item_detail_fragment.xml
@@ -155,6 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="@string/save"
+            android:onClick="@{() ->itemDetailViewModel.onShoeItemList()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cancel"
