--- a/starter/app/src/main/res/layout/instructions_fragment.xml
+++ b/starter/app/src/main/res/layout/instructions_fragment.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/large"
             android:layout_marginEnd="16dp"
             android:text="@string/oxfords"
             android:textAlignment="center"
