--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="margin_wide">16dp</dimen>
     <dimen name="margin_half">8dp</dimen>
     <dimen name="box_text_size">24sp</dimen>
+    <dimen name="large">64dp</dimen>
 </resources>
